# cpp-ext-with-numpy

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  setup.py
src/: _hello.cpp  cosine.cpp  numpy_cosine.cpp  trigmodule.cpp
