[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm[toml]", "numpy"]

[project]
authors = [{name = "ndmlny-qs", email = "60523020+ndmlny-qs@users.noreply.github.com"}]
classifiers = []
dependencies = ["pre-commit"]
description = "C++ extention build using NumPy as an optional dependency."
keywords = []
license = {file = "LICENSE"}
maintainers = []
name = "trig"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "flake8-pyproject",
  "isort",
  "jupyterlab-katex",
  "jupyterlab-spellchecker",
  "jupyterlab-unfold",
  "jupyterlab_code_formatter",
  "mdformat",
  "mdformat-myst",
  "pyre-check",
  "ruff",
  "yamlfix",
]
numpy = ["numpy"]
test = ["ipdb", "pytest", "pytest-cov"]

[project.urls]
"Issues" = "https://github.com/ndmlny-qs/cpp-ext-with-numpy/issues"
"Source" = "https://github.com/ndmlny-qs/cpp-ext-with-numpy"

[tool.flake8]
extend-ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in __init__
  "E203", # Whitespace before ':'
]
max-line-length = 88
per-file-ignores = """
  __init__.py: F401
"""

[tool.isort]
profile = "black"

[tool.ruff]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.yamlfix]
explicit_start = false
line_length = 88
section_whitelines = 1
sequence_style = "block_style"
whitelines = 1
